# ootrans_server

./: .gitignore  Cargo.toml  README.md  example.env
src/: lib.rs  main.rs
src/model/: mod.rs  request_args.rs  response.rs
src/utils/: token.rs
